lint: Add persistence to values.yaml

--- a/charts/sickchill/values.yaml
+++ b/charts/sickchill/values.yaml
@@ -104,6 +104,10 @@ readinessProbe:
   tcpSocket:
     port: 8081
 
+persistence:
+  enabled: false
+  volumes: []
+
 # Additional volumes on the output Deployment definition.
 volumes: []
 # - name: foo
